
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = amulet/_version.py
versionfile_build = amulet/_version.py
tag_prefix =
parentdir_prefix = amulet-

[options.entry_points]
pyinstaller40 =
    hook-dirs = amulet.__pyinstaller:get_hook_dirs

[metadata]
name = amulet-core
url = https://www.amuletmc.com
author = James Clare, Ben Gothard et al.
author_email = amuleteditor@gmail.com
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = A Python library for reading/writing Minecraft's various save formats.
platforms = any

[options]
python_requires = >=3.6
dependency_links =
    https://github.com/gentlegiantJGC/PyMCTranslate
    https://github.com/Amulet-Team/Amulet-NBT