[metadata]
name = amulet-core
url = https://www.amuletmc.com
author = James Clare, Ben Gothard et al.
author_email = amuleteditor@gmail.com
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = A Python library for reading/writing Minecraft's various save formats.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any


[options]
package_dir=
    =src
packages = find:
python_requires = >=3.11
install_requires =
    numpy~=1.21
    amulet-nbt~=4.0a1
    portalocker~=2.4
    amulet-leveldb~=1.0b0
    platformdirs~=3.1
    amulet-runtime-final~=1.1
    pillow~=10.0
    lz4~=4.3

[options.packages.find]
where=src

[options.package_data]
amulet_nbt =
    *.pyi
    py.typed
    *.png
    *.pyd
    *.so
    *.dylib
    cpp/**/*.hpp
    cpp/**/*.cpp


[options.extras_require]
docs =
    Sphinx>=1.7.4
    sphinx-autodoc-typehints>=1.3.0
    sphinx_rtd_theme>=0.3.1
dev =
    black>=22.3
    pre_commit>=1.11.1
    mypy
    types-pyinstaller


[options.entry_points]
pyinstaller40 =
    hook-dirs = amulet.__pyinstaller:get_hook_dirs


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/amulet/_version.py
versionfile_build = amulet/_version.py
tag_prefix =
parentdir_prefix = amulet-
